status/li/littlefs/0.3.1/macos/darwin-23.5.0/gnat=10.3.2/littlefs-0.3.1.yaml.log
Test ran at 2024-10-02 12:38:30.478916+00:00

SOLUTION:
littlefs=0.3.1: Ada/SPARK binding for the LittleFS flash embedded filesystem
Origin: commit d184aefe7ee3f987994b970b9da20f94185f1604 from https://github.com/Fabien-Chouteau/littlefs-ada.git
Properties:
   Author: Fabien Chouteau
   Config type: Assert : Boolean default: 'false'
   Config type: Debug : Boolean default: 'false'
   Config type: Error : Boolean default: 'false'
   Config type: Max_Attr_Size : Integer range 1 .. 1022 default: '1022'
   Config type: Max_File_Size : Integer range 1 .. 2147483647 default: '2147483647'
   Config type: Max_Name_Size : Integer range 1 .. 1022 default: '255'
   Config type: No_Malloc : Boolean default: 'true'
   Config type: Trace : Boolean default: 'false'
   Config type: Warn : Boolean default: 'false'
   Configuration: no modifiers
   Description: Ada/SPARK binding for the LittleFS flash embedded filesystem
   License: BSD-3-Clause
   Maintainer: Fabien Chouteau <chouteau@adacore.com>
   Maintainers_Logins: Fabien-Chouteau
   Name: littlefs
   Tag: embedded
   Tag: filesystem
   Tag: nostd
   Tag: flash
   Version: 0.3.1
   Website: https://github.com/Fabien-Chouteau/littlefs-ada


LOG:
Note: Deploying littlefs=0.3.1...
Note: Building littlefs/littlefs.gpr...
Setup
   [mkdir]        object directory for project Littlefs
   [mkdir]        library directory for project Littlefs
Compile
   [C]            lfs_util.c
   [C]            lfs.c
   [Ada]          littlefs_config.ads
   [Ada]          littlefs.adb
In file included from /Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/sys/_types.h:32,
                 from /Users/runner/.config/alire/cache/dependencies/gnat_native_10.3.2_e112fd3f/lib/gcc/x86_64-apple-darwin19.6.0/10.3.0/include-fixed/stdint.h:61,
                 from /Users/runner/.config/alire/cache/dependencies/gnat_native_10.3.2_e112fd3f/lib/gcc/x86_64-apple-darwin19.6.0/10.3.0/include/stdint.h:9,
                 from /Users/runner/work/alire-crates-ci/alire-crates-ci/test/8e03bcbe-e386-44a6-8641-6113913acd17/littlefs_0.3.1_d184aefe/littlefs/lfs_util.h:23,
                 from /Users/runner/work/alire-crates-ci/alire-crates-ci/test/8e03bcbe-e386-44a6-8641-6113913acd17/littlefs_0.3.1_d184aefe/littlefs/lfs_util.c:7:
/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/sys/cdefs.h:567:30: error: missing ')' after "__has_attribute"
  567 | #if __has_cpp_attribute(clang::unsafe_buffer_usage)
      |                              ^~
/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/sys/cdefs.h:567:32: error: missing binary operator before token "unsafe_buffer_usage"
  567 | #if __has_cpp_attribute(clang::unsafe_buffer_usage)
      |                                ^~~~~~~~~~~~~~~~~~~
In file included from /Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/sys/_types.h:32,
                 from /Users/runner/.config/alire/cache/dependencies/gnat_native_10.3.2_e112fd3f/lib/gcc/x86_64-apple-darwin19.6.0/10.3.0/include-fixed/stdint.h:61,
                 from /Users/runner/.config/alire/cache/dependencies/gnat_native_10.3.2_e112fd3f/lib/gcc/x86_64-apple-darwin19.6.0/10.3.0/include/stdint.h:9,
                 from /Users/runner/work/alire-crates-ci/alire-crates-ci/test/8e03bcbe-e386-44a6-8641-6113913acd17/littlefs_0.3.1_d184aefe/littlefs/lfs.h:10,
                 from /Users/runner/work/alire-crates-ci/alire-crates-ci/test/8e03bcbe-e386-44a6-8641-6113913acd17/littlefs_0.3.1_d184aefe/littlefs/lfs.c:7:
/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/sys/cdefs.h:567:30: error: missing ')' after "__has_attribute"
  567 | #if __has_cpp_attribute(clang::unsafe_buffer_usage)
      |                              ^~
/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/sys/cdefs.h:567:32: error: missing binary operator before token "unsafe_buffer_usage"
  567 | #if __has_cpp_attribute(clang::unsafe_buffer_usage)
      |                                ^~~~~~~~~~~~~~~~~~~

   compilation of lfs.c failed
   compilation of lfs_util.c failed

gprbuild: *** compilation phase failed
stderr: Command ["gprbuild", "-s", "-j0", "-p", "-P", "/Users/runner/work/alire-crates-ci/alire-crates-ci/test/8e03bcbe-e386-44a6-8641-6113913acd17/littlefs_0.3.1_d184aefe/littlefs.gpr"] exited with code 4
ERROR: Command ["gprbuild", "-s", "-j0", "-p", "-P", "/Users/runner/work/alire-crates-ci/alire-crates-ci/test/8e03bcbe-e386-44a6-8641-6113913acd17/littlefs_0.3.1_d184aefe/littlefs.gpr"] exited with code 4
stderr: ALIRE.CHECKED_ERROR
stderr: Command ["gprbuild", "-s", "-j0", "-p", "-P", "/Users/runner/work/alire-crates-ci/alire-crates-ci/test/8e03bcbe-e386-44a6-8641-6113913acd17/littlefs_0.3.1_d184aefe/littlefs.gpr"] exited with code 4
stderr: raised ALIRE.CHECKED_ERROR : alire-stored-error:1
Load address: 0x104275000
Call stack traceback locations:
0x104b7d415 0x104850e83 0x104a63df9 0x104a64581 0x1049c4ac3 0x1049c2f99 0x1049df873 0x104a2bdc1 0x104a2a81a 0x1049df9b8 0x1049c3349 0x1042d49c1 0x1042e5578 0x1042ea01c 0x10437005c 0x10437b3b8 0x104276605 0x104279914


Warning: littlefs=0.3.1 successfully retrieved but its build failed.
There are no dependencies.
ERROR: Build ended with errors
